--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2021"
 [dependencies]
 yew = { version = "0.21.0", features = ["csr"] }
 gloo-net = "0.6.0"
+gloo-storage = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 wasm-bindgen-futures = "0.4"
+
+dotenvy_macro = "0.15.7"
